--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "dependencies": {
         "arg": "^5.0.0",
         "autoprefixer": "^10.2.5",
-        "chalk": "^2.4.2",
-        "chokidar": "^3.5.1",
-        "cssnano": "^5.0.1",
-        "mkdirp": "^1.0.4",
+        "chalk": "5.3.0",
+        "chokidar": "4.0.1",
+        "cssnano": "7.0.6",
+        "mkdirp": "3.0.1",
         "postcss": "^8.2.12",
-        "postcss-cli": "^8.3.1",
-        "tailwindcss": "^2.1.1"
+        "postcss-cli": "11.0.0",
+        "tailwindcss": "3.4.14"
     }
 }
