--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dependencies": {
         "arg": "^5.0.0",
         "autoprefixer": "^10.2.5",
-        "chalk": "5.3.0",
+        "chalk": "^4.1.2",
         "chokidar": "4.0.1",
         "cssnano": "7.0.6",
         "mkdirp": "3.0.1",
